# PyxLSTM

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: stale.yml
configs/: config.yaml
data/: dataset.py  tokenizer.py
docs/: conf.py  index.rst  mlstm.md  requirements.txt  slstm.md  training.md
examples/: language_modeling.py  xLSTM_shape_verification.py
scripts/: evaluate.py  generate.py  train.py
tests/: test_block.py  test_mlstm.py  test_model.py  test_slstm.py
utils/: config.py  logging.py  utils.py
xLSTM/: __init__.py  block.py  mlstm.py  model.py  slstm.py
